ExtraPages option added during stateful contract creation

--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateAppEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateAppEntryForm.form
@@ -29,6 +29,8 @@
         <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="top:3dlu:noGrow"/>
+        <rowspec value="center:max(d;4px):noGrow"/>
         <colspec value="fill:d:noGrow"/>
         <colspec value="left:4dlu:noGrow"/>
         <colspec value="fill:d:grow"/>
@@ -173,6 +175,24 @@
           <component id="bd40c" class="javax.swing.JComboBox" binding="contractCB">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="d8992" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="18" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Extra Pages"/>
+            </properties>
+          </component>
+          <component id="6c8f9" class="javax.swing.JTextField" binding="extraPagesTf">
+            <constraints>
+              <grid row="18" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
               <forms defaultalign-horz="false"/>
             </constraints>
             <properties/>
