--- a/src/main/java/com/bloxbean/algodea/idea/debugger/ui/DebugConfigDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/debugger/ui/DebugConfigDialog.form
@@ -6,15 +6,17 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <colspec value="fill:d:noGrow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="603" height="100"/>
+      <xy x="20" y="20" width="603" height="150"/>
     </constraints>
     <properties>
-      <minimumSize width="600" height="100"/>
-      <preferredSize width="600" height="100"/>
+      <minimumSize width="600" height="150"/>
+      <preferredSize width="600" height="150"/>
     </properties>
     <border type="none"/>
     <children>
@@ -62,6 +64,15 @@
           <forms/>
         </constraints>
         <properties/>
+      </component>
+      <component id="29cf3" class="javax.swing.JCheckBox" binding="disableChromeOpenCB">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="Don't open Chrome automatically"/>
+        </properties>
       </component>
     </children>
   </grid>
