--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
@@ -7,7 +7,7 @@
       <xy x="20" y="20" width="1000" height="900"/>
     </constraints>
     <properties>
-      <minimumSize width="860" height="820"/>
+      <minimumSize width="860" height="220"/>
       <preferredSize width="704" height="820"/>
     </properties>
     <border type="none"/>
@@ -30,42 +30,62 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="dccb0" layout-manager="FormLayout">
-                <rowspec value="center:d:grow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:max(d;4px):noGrow"/>
-                <colspec value="fill:d:grow"/>
+              <scrollpane id="18d58">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none"/>
+                <border type="empty"/>
                 <children>
-                  <nested-form id="8207e" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form" binding="appTxnBaseEntryForm" custom-create="true">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms top="5" left="0" bottom="0" right="0" defaultalign-vert="false"/>
-                    </constraints>
-                  </nested-form>
+                  <grid id="a88c4" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints/>
+                    <properties>
+                      <minimumSize width="704" height="750"/>
+                      <preferredSize width="704" height="750"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <grid id="dccb0" layout-manager="FormLayout">
+                        <rowspec value="center:d:grow"/>
+                        <rowspec value="top:3dlu:noGrow"/>
+                        <rowspec value="center:max(d;4px):noGrow"/>
+                        <colspec value="fill:d:grow"/>
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <nested-form id="8207e" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form" binding="appTxnBaseEntryForm" custom-create="true">
+                            <constraints>
+                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+                              <forms top="5" left="0" bottom="0" right="0" defaultalign-vert="false"/>
+                            </constraints>
+                          </nested-form>
+                        </children>
+                      </grid>
+                      <grid id="39bbc" layout-manager="FormLayout">
+                        <rowspec value="center:d:noGrow"/>
+                        <colspec value="fill:d:grow"/>
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <nested-form id="c86c3" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form" binding="appTxnDetailsEntryForm" custom-create="true">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+                              <forms defaultalign-vert="false"/>
+                            </constraints>
+                          </nested-form>
+                        </children>
+                      </grid>
+                    </children>
+                  </grid>
                 </children>
-              </grid>
-              <grid id="39bbc" layout-manager="FormLayout">
-                <rowspec value="center:d:noGrow"/>
-                <colspec value="fill:d:grow"/>
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <nested-form id="c86c3" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form" binding="appTxnDetailsEntryForm" custom-create="true">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms defaultalign-vert="false"/>
-                    </constraints>
-                  </nested-form>
-                </children>
-              </grid>
+              </scrollpane>
             </children>
           </grid>
           <grid id="37ab8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -76,11 +96,18 @@
             <properties/>
             <border type="none"/>
             <children>
-              <nested-form id="d215b" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDtlEntryForm" custom-create="true">
+              <scrollpane id="ff895">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-              </nested-form>
+                <properties/>
+                <border type="empty"/>
+                <children>
+                  <nested-form id="d215b" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDtlEntryForm" custom-create="true">
+                    <constraints/>
+                  </nested-form>
+                </children>
+              </scrollpane>
             </children>
           </grid>
         </children>
